Adaptacion de inscripciones

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,7 @@
                 <a class="nav-link" href="#">General</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Inscripciones</a>
+                <a class="nav-link" href="{{ url_for('teams_bp.inscripciones') }}">Inscripciones</a>
               </li>
               <li class="nav-item"></li>
                 <a class="nav-link" href="#">Partidos</a>
