--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -14,7 +14,7 @@
     <!-- NAVIGATION  -->
     <nav class="navbar navbar-dark bg-dark">
             <a class="navbar-brand" style="padding: 14px; margin-left: 40px;">--- ADMIN PAGE ---</a>
-        <a class="nav-link" href="{{ url_for('home') }}" style="margin-right: 30px;"><img src="static/images/home_ico.png" alt="#" /></a>
+        <a class="nav-link" href="{{ url_for('main.general') }}" style="margin-right: 30px;"><img src="static/images/home_ico.png" alt="#" /></a>
     </nav>
 
         {% block body %}
