--- a/app/templates/edit-team.html
+++ b/app/templates/edit-team.html
@@ -11,83 +11,83 @@
         <div class="col-md-8">
             <div class="card">
                 <div class="card-body">
-                    <form id="teamForm" action="/update/{{team.0}}" method="POST">
+                    <form id="teamForm" action="/update/{{team.ID}}" method="POST">
                         <div class="form-group">
                             <label for="Equipo">Equipo</label>
-                            <input type="text" class="form-control" id="Equipo" name="Equipo" placeholder="Equipo" value="{{ team.1 }}" required>
+                            <input type="text" class="form-control" id="Equipo" name="Equipo" placeholder="Equipo" value="{{ team.Equipo }}" required>
                         </div>
                         <div class="form-group">
                             <label for="Colegio">Colegio</label>
-                            <input type="text" class="form-control" id="Colegio" name="Colegio" placeholder="Colegio" value="{{ team.2 }}" required>
+                            <input type="text" class="form-control" id="Colegio" name="Colegio" placeholder="Colegio" value="{{ team.Colegio }}" required>
                         </div>
                         <div class="form-group">
                             <label for="Deporte">Deporte</label>
                             <select class="form-control" id="Deporte" name="Deporte" required>
-                                <option value="Futbol" {% if team.3=='Futbol' %}selected{% endif %}>Futbol</option>
-                                <option value="Basquet" {% if team.3=='Basquet' %}selected{% endif %}>Basquet</option>
-                                <option value="Voley" {% if team.3=='Voley' %}selected{% endif %}>Voley</option>
+                                <option value="Futbol" {% if team.Deporte=='Futbol' %}selected{% endif %}>Futbol</option>
+                                <option value="Basquet" {% if team.Deporte=='Basquet' %}selected{% endif %}>Basquet</option>
+                                <option value="Voley" {% if team.Deporte=='Voley' %}selected{% endif %}>Voley</option>
                             </select>
                         </div>
                         <div class="form-group">
                             <label for="Categoria">Categoría</label>
                             <select class="form-control" id="Categoria" name="Categoria" required>
-                                <option value="Masculino mayor" {% if team.4=='Masculino mayor' %}selected{% endif %}>Masculino mayor</option>
-                                <option value="Masculino menor" {% if team.4=='Masculino menor' %}selected{% endif %}>Masculino menor</option>
-                                <option value="Femenino mayor" {% if team.4=='Femenino mayor' %}selected{% endif %}>Femenino mayor</option>
-                                <option value="Femenino menor" {% if team.4=='Femenino menor' %}selected{% endif %}>Femenino menor</option>
+                                <option value="Masculino mayor" {% if team.Categoria=='Masculino mayor' %}selected{% endif %}>Masculino mayor</option>
+                                <option value="Masculino menor" {% if team.Categoria=='Masculino menor' %}selected{% endif %}>Masculino menor</option>
+                                <option value="Femenino mayor" {% if team.Categoria=='Femenino mayor' %}selected{% endif %}>Femenino mayor</option>
+                                <option value="Femenino menor" {% if team.Categoria=='Femenino menor' %}selected{% endif %}>Femenino menor</option>
                             </select>
                         </div>
                         <div class="form-group">
                             <label for="Telefono">Teléfono</label>
-                            <input type="tel" class="form-control" id="Telefono" name="Telefono" placeholder="Teléfono" value="{{ team.5 }}" required>
+                            <input type="tel" class="form-control" id="Telefono" name="Telefono" placeholder="Teléfono" value="{{ team.Telefono }}" required>
                         </div>
                         <div class="form-group">
                             <label for="DNI">DNI</label>
-                            <input type="text" class="form-control" id="DNI" name="DNI" placeholder="DNI" value="{{ team.6 }}" required>
+                            <input type="text" class="form-control" id="DNI" name="DNI" placeholder="DNI" value="{{ team.DNI }}" required>
                         </div>
                         <div class="form-group">
                             <label for="Correo">Correo</label>
-                            <input type="email" class="form-control" id="Correo" name="Correo" placeholder="Correo" value="{{ team.7 }}" required>
+                            <input type="email" class="form-control" id="Correo" name="Correo" placeholder="Correo" value="{{ team.Correo }}" required>
                         </div>
                         <div class="form-group">
                             <label for="Miembros">Miembros</label>
-                            <input type="text" class="form-control" id="Miembros" name="Miembros" placeholder="Miembros" value="{{ team.8 }}" required>
+                            <input type="text" class="form-control" id="Miembros" name="Miembros" placeholder="Miembros" value="{{ team.Miembros }}" required>
                         </div>
                         <div class="form-group">
                             <label for="Acompañantes">Acompañantes</label>
-                            <input type="text" class="form-control" id="Acompañantes" name="Acompañantes" placeholder="Acompañantes" value="{{ team.9 }}" required>
+                            <input type="text" class="form-control" id="Acompañantes" name="Acompañantes" placeholder="Acompañantes" value="{{ team.Acompañantes }}" required>
                         </div>
                         <div class="form-group">
                             <label for="Vegetariano">Vegetariano</label>
                             <select class="form-control" id="Vegetariano" name="Vegetariano" required>
-                                <option value="1" {% if team.10=='1' %}selected{% endif %}>1</option>
-                                <option value="2" {% if team.10=='2' %}selected{% endif %}>2</option>
-                                <option value="3" {% if team.10=='3' %}selected{% endif %}>3</option>
-                                <option value="4" {% if team.10=='4' %}selected{% endif %}>4</option>
-                                <option value="5" {% if team.10=='5' %}selected{% endif %}>5</option>
-                                <option value="NO" {% if team.10=='NO' %}selected{% endif %}>NINGUNO</option>
+                                <option value="1" {% if team.Vegetariano=='1' %}selected{% endif %}>1</option>
+                                <option value="2" {% if team.Vegetariano=='2' %}selected{% endif %}>2</option>
+                                <option value="3" {% if team.Vegetariano=='3' %}selected{% endif %}>3</option>
+                                <option value="4" {% if team.Vegetariano=='4' %}selected{% endif %}>4</option>
+                                <option value="5" {% if team.Vegetariano=='5' %}selected{% endif %}>5</option>
+                                <option value="NO" {% if team.Vegetariano=='NO' %}selected{% endif %}>NINGUNO</option>
                             </select>
                         </div>
                         <div class="form-group">
                             <label for="Celiaco">Celiaco</label>
                             <select class="form-control" id="Celiaco" name="Celiaco" required>
-                                <option value="1" {% if team.11=='1' %}selected{% endif %}>1</option>
-                                <option value="2" {% if team.11=='2' %}selected{% endif %}>2</option>
-                                <option value="3" {% if team.11=='3' %}selected{% endif %}>3</option>
-                                <option value="4" {% if team.11=='4' %}selected{% endif %}>4</option>
-                                <option value="5" {% if team.11=='5' %}selected{% endif %}>5</option>
-                                <option value="NO" {% if team.11=='NO' %}selected{% endif %}>NINGUNO</option>
+                                <option value="1" {% if team.Celiaco=='1' %}selected{% endif %}>1</option>
+                                <option value="2" {% if team.Celiaco=='2' %}selected{% endif %}>2</option>
+                                <option value="3" {% if team.Celiaco=='3' %}selected{% endif %}>3</option>
+                                <option value="4" {% if team.Celiaco=='4' %}selected{% endif %}>4</option>
+                                <option value="5" {% if team.Celiaco=='5' %}selected{% endif %}>5</option>
+                                <option value="NO" {% if team.Celiaco=='NO' %}selected{% endif %}>NINGUNO</option>
                             </select>
                         </div>
                         <div class="form-group">
                             <label for="Diabetico">Diabético</label>
                             <select class="form-control" id="Diabetico" name="Diabetico" required>
-                                <option value="1" {% if team.12=='1' %}selected{% endif %}>1</option>
-                                <option value="2" {% if team.12=='2' %}selected{% endif %}>2</option>
-                                <option value="3" {% if team.12=='3' %}selected{% endif %}>3</option>
-                                <option value="4" {% if team.12=='4' %}selected{% endif %}>4</option>
-                                <option value="5" {% if team.12=='5' %}selected{% endif %}>5</option>
-                                <option value="NO" {% if team.12=='NO' %}selected{% endif %}>NINGUNO</option>
+                                <option value="1" {% if team.Diabetico=='1' %}selected{% endif %}>1</option>
+                                <option value="2" {% if team.Diabetico=='2' %}selected{% endif %}>2</option>
+                                <option value="3" {% if team.Diabetico=='3' %}selected{% endif %}>3</option>
+                                <option value="4" {% if team.Diabetico=='4' %}selected{% endif %}>4</option>
+                                <option value="5" {% if team.Diabetico=='5' %}selected{% endif %}>5</option>
+                                <option value="NO" {% if team.Diabetico=='NO' %}selected{% endif %}>NINGUNO</option>
                             </select>
                         </div>
                         <button type="submit" id="submitButton" class="btn btn-primary btn-block" disabled>Guardar</button>
