--- a/app/templates/general.html
+++ b/app/templates/general.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2 class="mt-3">Messi</h2>
+<h2 class="mt-3">El hector 10</h2>
 {% endblock %}
 
 {% block js %}
