todo avance sirve, con el Chipri

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
                 <a class="nav-link" href="{{ url_for('teams_bp.inscripciones') }}">Inscripciones</a>
               </li>
               <li class="nav-item"></li>
-                <a class="nav-link" href="#">Partidos</a>
+                <a class="nav-link" href="{{ url_for('sport_bp.partidos') }}">Partidos</a>
               </li>
               <li class="nav-item"></li>
                 <a class="nav-link" href="#">Log In</a>
