--- a/app/templates/deportes/grupos.html
+++ b/app/templates/deportes/grupos.html
@@ -1,5 +1,53 @@
 {% extends "./layout.html" %}
+
+{% block extra_head %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+{% endblock %}
+
+
+
 {% block body %}
+<style>
+    .tabla-clasificacion {
+        background-color: #000000;
+        width: 80%;
+        max-width: 600px;
+        border-radius: 8px;
+        overflow: hidden;
+        text-align: center;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    }
+    .tabla-clasificacion h2 {
+        background-color: #f1c40f;
+        color: #333;
+        padding: 15px 0;
+        margin: 0;
+        font-size: 1.5em;
+    }
+    h3 {
+        color: #f1f1f1;
+    }
+    table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+    th, td {
+        padding: 12px;
+    }
+    th {
+        background-color: #333333;
+        color: #f1f1f1;
+    }
+    td {
+        background-color: #555555;
+        color: #fff;
+    }
+    .highlight {
+        background-color: #f19f23;
+        font-weight: bold;
+    }
+</style>
+
 
 <div class="col-md-16" style="margin: 40px;">
     <div class="admin_bar"
@@ -33,19 +81,58 @@
     </div>
 </div>
 
-<div class="container mt-4">
-    <div class="row">
-        {% for i in range(6) %}
-        <div class="col-md-4 mb-4">
-            <a href=# class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Grupo {{ i + 1 }}</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-            </a>
-        </div>
-        {% endfor %}
-    </div>
+<div class="tabla-clasificacion">
+    <h3>Grupo A</h3>
+    <table>
+        <thead>
+            <tr>
+                <th>POS</th>
+                <th>EQUIPOS</th>
+                <th>PG</th>
+                <th>PE</th>
+                <th>PP</th>
+                <th>DG</th>
+                <th class="highlight">PTS</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Renault</td>
+                <td>2</td>
+                <td>0</td>
+                <td>0</td>
+                <td>+3</td>
+                <td class="highlight">6</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Paw Patrol</td>
+                <td>1</td>
+                <td>0</td>
+                <td>1</td>
+                <td>+1</td>
+                <td class="highlight">3</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>HectorFc</td>
+                <td>1</td>
+                <td>0</td>
+                <td>1</td>
+                <td>0</td>
+                <td class="highlight">3</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>CA Bytecelona</td>
+                <td>0</td>
+                <td>0</td>
+                <td>2</td>
+                <td>-3</td>
+                <td class="highlight">0</td>
+            </tr>
+        </tbody>
+    </table>
 </div>
-
 {% endblock %}
