--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,259 +1,187 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://www.pngitem.com/pimgs/m/22-221984_registro-png-transparent-png.png">
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-      
-      body {
-        overflow: hidden;
-        height: 100%;
-      }
-      
-      section {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        background: linear-gradient(to bottom, #161616, #777777);
-        opacity: 9.8;
-      }
-      
-      section .color {
-        position: absolute;
-        filter: blur(150px);
-      }
-      
-      section .color:nth-child(1) {
-        top: -350px;
-        width: 600px;
-        height: 600px;
-        background: #dbcd0a;
-      }
-      
-      section .color:nth-child(2) {
-        bottom: -150px;
-        left: 100px;
-        width: 500px;
-        height: 500px;
-        background: #f1f504;
-      }
-      
-      section .color:nth-child(3) {
-        bottom: 50px;
-        left: 100px;
-        width: 300px;
-        height: 300px;
-        background: #292929;
-      }
-      
-      .box {
-        position: relative;
-      }
-      
-      .box .square {
-        position: absolute;
-        backdrop-filter: blur(5px);
-        box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1);
-        border: 1px solid rgba(255, 255, 255, 0.5);
-        border-right: 1px solid rgba(255, 255, 255, 0.2);
-        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-        background: rgba(255, 255, 255, 0.1);
-        border-radius: 10px;
-        animation: animate 10s linear infinite;
-        animation-delay: calc(-1s * var(--i));
-      }
-      
-      @keyframes animate {
-        0%, 100% {
-          transform: translateY(-40px);
-        }
-        50% {
-          transform: translateY(40px);
-        }
-      }
-      
-      .box .square:nth-child(1) {
-        top: -50px;
-        right: -60px;
-        width: 100px;
-        height: 100px;
-      }
-      
-      .box .square:nth-child(2) {
-        top: 150px;
-        left: -140px;
-        width: 120px;
-        height: 120px;
-        z-index: 2;
-      }
-      
-      .box .square:nth-child(3) {
-        bottom: 50px;
-        right: -80px;
-        width: 80px;
-        height: 80px;
-        z-index: 2;
-      }
-      
-      .box .square:nth-child(4) {
-        bottom: -80px;
-        right: 100px;
-        width: 50px;
-        height: 90px;
-      }
-      
-      .box .square:nth-child(5) {
-        bottom: -80px;
-        right: 140px;
-        width: 60px;
-        height: 60px;
-      }
-      
-      .container.scale {
-        transform: scale(1.35);
-        opacity: 0.9;
-      }
-      
-      .container {
-        position: relative;
-        width: 400px;
-        min-height: 400px;
-        background: rgba(255, 255, 255, 0.1);
-        border-radius: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        backdrop-filter: blur(5px);
-        box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1);
-        border: 1px solid rgba(255, 255, 255, 0.5);
-        border-right: 1px solid rgba(255, 255, 255, 0.2);
-        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-      }
-      
-      .form {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        padding: 40px;
-      }
-      
-      .form h2 {
-        position: relative;
-        color: #fff;
-        font-size: 24px;
-        font-weight: 600;
-        letter-spacing: 1px;
-        margin-bottom: 40px;
-      }
-      
-      .form h2::before {
-        content: '';
-        position: absolute;
-        left: 0;
-        bottom: -10px;
-        width: 80px;
-        height: 4px;
-        background: #fff;
-      }
-      
-      .form .inputBox {
-        width: 100%;
-        margin-top: 20px;
-      }
-      
-      .form .inputBox input {
-        width: 100%;
-        background: rgba(255, 255, 255, 0.2);
-        border: none;
-        outline: none;
-        padding: 10px 20px;
-        border-radius: 35px;
-        border: 1px solid rgba(255, 255, 255, 0.5);
-        border-right: 1px solid rgba(255, 255, 255, 0.2);
-        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-        font-size: 16px;
-        letter-spacing: 1px;
-        color: #fff;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
-      }
-      
-      .form .inputBox input::placeholder {
-        color: #fff;
-      }
-      
-      .form .inputBox input[type="submit"] {
-        background: #fff;
-        color: #666;
-        max-width: 100px;
-        cursor: pointer;
-        margin-bottom: 20px;
-        font-weight: 600;
-      }
-      
-      .forget {
-        margin-top: 5px;
-        color: #fff;
-      }
-      
-      .forget a {
-        color: #fff;
-        font-weight: 600;
-      }
-    </style>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <title>Sign In</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      background: #232425;
+      font-family: 'Roboto', sans-serif;
+    }
+
+    .login-box {
+      margin-top: 75px;
+      height: auto;
+      background: #272829;
+      text-align: center;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    }
+
+    .login-key {
+      height: 100px;
+      font-size: 80px;
+      line-height: 100px;
+      background: -webkit-linear-gradient(#eaf010, #f7b84a);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .login-title {
+      margin-top: 15px;
+      text-align: center;
+      font-size: 30px;
+      letter-spacing: 2px;
+      margin-top: 15px;
+      font-weight: bold;
+      color: #ECF0F5;
+    }
+
+    .login-form {
+      margin-top: 25px;
+      text-align: left;
+    }
+
+    input[type=text] {
+      background-color: #232324;
+      border: none;
+      border-bottom: 2px solid #eaf010;
+      border-top: 0px;
+      border-radius: 0px;
+      font-weight: bold;
+      outline: 0;
+      margin-bottom: 20px;
+      padding-left: 0px;
+      color: rgb(85, 85, 85);
+    }
+
+    input[type=password] {
+      background-color: #232324;
+      border: none;
+      border-bottom: 2px solid #eaf010;
+      border-top: 0px;
+      border-radius: 0px;
+      font-weight: bold;
+      outline: 0;
+      padding-left: 0px;
+      margin-bottom: 20px;
+      color: rgb(85, 85, 85);
+    }
+
+    .form-group {
+      margin-bottom: 40px;
+      outline: 0px;
+    }
+
+    .form-control:focus {
+      border-color: inherit;
+      -webkit-box-shadow: none;
+      box-shadow: none;
+      border-bottom: 2px solid #eaf010;
+      outline: 0;
+      background-color: #21211f;
+      color: rgb(85, 85, 85);
+    }
+
+    input:focus {
+      outline: none;
+      box-shadow: 0 0 0;
+    }
+
+    label {
+      margin-bottom: 0px;
+    }
+
+    .form-control-label {
+      font-size: 10px;
+      color: rgb(85, 85, 85);
+      font-weight: bold;
+      letter-spacing: 1px;
+    }
+
+    .btn-outline-primary {
+      border-color: #eaf010;
+      color: #21201e;
+      border-radius: 0px;
+      font-weight: bold;
+      letter-spacing: 1px;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    }
+
+    .btn-outline-primary:hover {
+      background-color: #21201e;
+      right: 0px;
+
+    }
+
+    .login-btm {
+      float: left;
+    }
+
+    .login-button {
+      padding-right: 0px;
+      text-align: right;
+      margin-bottom: 25px;
+    }
+
+    .login-text {
+      text-align: left;
+      padding-left: 0px;
+      color: rgb(85, 85, 85);
+    }
+
+    .loginbttm {
+      padding: 0px;
+    }
+  </style>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css'>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css'>
+  <title>Sign In</title>
 </head>
+
 <body>
-    <main>
-        <section>
-            <div class="color"></div>
-            <div class="color"></div>
-            <div class="color"></div>
-            <div class="box">
-                <div class="square" style="--i:0;"></div>
-                <div class="square" style="--i:1;"></div>
-                <div class="square" style="--i:2;"></div>
-                <div class="square" style="--i:3;"></div>
-                <div class="square" style="--i:4;"></div>
-                <div class="container scale">
-                    <div class="form">
-                        <h2>Sign In</h2>
-                        <form method="POST">
-                          {{ form.csrf_token }}
-                            <div class="inputBox">
-                              {{ form.nombre(placeholder="Nombre") }}
-                            </div>
-                            <div class="inputBox">
-                              {{ form.contraseña(placeholder="Contraseña") }}
-                            </div>
-                            <div class="inputBox">
-                                <input type="submit" value="Sign In">
-                            </div>
-                        </form>
-                        {% with messages = get_flashed_messages() %}
-                            {% if messages %}
-                            <div class="alert mx-auto msg" role="alert" style="max-width: 30rem;">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-octagon" viewBox="0 0 16 16">
-                                    <path d="M4.54.146A.5.5 0 0 1 4.893 0h6.214a.5.5 0 0 1 .353.146l4.394 4.394a.5.5 0 0 1 .146.353v6.214a.5.5 0 0 1-.146.353l-4.394 4.394a.5.5 0 0 1-.353.146H4.893a.5.5 0 0 1-.353-.146L.146 11.46A.5.5 0 0 1 0 11.107V4.893a.5.5 0 0 1 .146-.353zM5.1 1 1 5.1v5.8L5.1 15h5.8l4.1-4.1V5.1L10.9 1z"/>
-                                    <path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"/>
-                                  </svg>
-                                {% for message in messages %}
-                                {{ message }}
-                                {% endfor %}  
-                            </div>
-                            {% endif %}
-                        {% endwith %}
-                    </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 col-md-2"></div>
+      <div class="col-lg-6 col-md-8 login-box">
+        <div class="col-lg-12 login-key">
+          <i class="fa fa-key" aria-hidden="true"></i>
+        </div>
+        <div class="col-lg-12 login-title">
+          ADMIN PANEL
+        </div>
+
+        <div class="col-lg-12 login-form">
+          <div class="col-lg-12 login-form">
+            <form>
+              <div class="form-group">
+                <label class="form-control-label">USERNAME</label>
+                <input type="text" class="form-control">
+              </div>
+              <div class="form-group">
+                <label class="form-control-label">PASSWORD</label>
+                <input type="password" class="form-control" i>
+              </div>
+
+              <div class="col-lg-12 loginbttm">
+                <div class="col-lg-6 login-btm login-text">
+                  <!-- Error Message -->
                 </div>
-            </div>
-        </section>
-    </main>
+                <div class="col-lg-6 login-btm login-button">
+                  <button type="submit" class="btn btn-outline-primary">LOGIN</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-2"></div>
+      </div>
+    </div>
 </body>
+
 </html>
